--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../../img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/buj4rmf.css">
-    <title>Juana Alvarez Tealicious</title>
+    <title>Juana Alvarez Graphic Design</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bgGreen">
   <div class="contenedor overflow-hidden">
     <div class="row nav">
       <div class="col-lg-6 col-12 logo">
-        <a href="../../index.html">Juana Alvarez — <span style="color: #F5C0C4;">Graphic Design</span></a>
+        <a href="#">Juana Alvarez — <span style="color: #F5C0C4;">Graphic Design</span></a>
       </div>
       <div class="col-lg-6 col-12 menu">
         <ul>
-          <li><a href="../work.html">WORK</a></li>
-          <li><a href="../about.html">ABOUT</a></li>
-          <li><a href="../contact.html">CONTACT</a></li>
+          <li><a href="pages/work.html">WORK</a></li>
+          <li><a href="pages/about.html">ABOUT</a></li>
+          <li><a href="pages/contact.html">CONTACT</a></li>
       </ul>
       </div>
     </div>
@@ -28,82 +28,74 @@
 
 
   <main>
-    <div class="contenedor overflow-hidden">
-      <div class="row ps-5 my-5">
+    <div class="contenedor overflow-hidden hero">
+      <div class="row ps-5">
         <div class="col-lg-10 col-12 introText pe-5">
-            <p class="titleWork">Tealicious</p>
+          <p class="introText">I’m <span style="color:#F5C0C4">Juana Alvarez</span>, a <span style="color:#F5C0C4">graphic designer</span> specialized in visual identity, packaging, wayfinding & web design</p>
         </div>
       </div>
       <div class="row ps-5">
         <div class="col-lg-12 col-12 exploreHome mb-5">
-          <image src="../../img/icon/arrow-long-pink-down.svg" alt="go to project"></image>  
-        </div>
-      </div>
-      <div class="row py-3 px-5">
-        <div class="col-lg-12 col-12 description">
-            <ul>
-                <li><a href="#">Branding & Packaging</a></li>
-                <li><a href="#">2015</a></li>
-                <li><a href="#">Food & beverage</a></li>
-                <li class="mb-3"><a href="#">Awards</a></li>
-            </ul>
+          <p><a href="#"> Latest work</a></p>
+          <image src="img/icon/arrow-long-white-down.svg" alt="go to project"></image>   
         </div>
       </div>
     </div>  
-    <div class="contenedor overflow-hidden bgWhite">
-        <div class="row introWork mt-5">
-            <div class="col-lg-6 col-12 mt-5">
-                <p> Tealicious is a small Tea Shop in the heart of Florence, Italy.
-                    Marcela, her owner and creator is a tea sommelier from Argentina, she is a truly tea fanatic and her idea is to share this passion with anyone who's interested in discovering a new world of colours, fragrance and flavours.
-                 </p>
-        </div> 
-        </div>
-        <div class="row workContent paddingTop">
-              <div class="col-lg-12 col-12 mb-5">
-                    <div>
-                       <image class="imgWork" src="../../img/work/tealicious/tealicious-cover.jpg" alt="go to project"> </image>
-                    </div>
+    <div class="contenedor bgStone overflow-hidden">
+        <div class="row">
+              <div class="col-lg-12 col-12">
+                <div class="card text-bg-dark" style="background-image: url(img/work/gallerieUffizi.png);">
+                  <div class="card-text-display card-img-overlay pt-5">
+                    <p class="titleCard"><a href="pages/work/galleria-degli-uffizi.html"> WEB DESIGN - 2023</a></p>
+                    <p class="titleCard"><a href="pages/work/galleria-degli-uffizi.html"> Gallerie degli Uffizi</a></p>
+                    <a href="pages/work/tealicious.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+                  </div>
                 </div>
-                <div class="col-lg-12 col-12 mb-5">
-                    <div>
-                        <image class="imgWork" src="../../img/work/tealicious/Tealicious-stationery.jpg" alt="go to project"> </image>
-                    </div>
-                </div>  
+              </div>
 
-                <div class="col-lg-12 col-12 mb-5">
-                    <div>
-                      <image class="imgWork" src="../../img/work/tealicious/tealicious-cup.jpg" alt="go to project"> </image>
-                    </div>
-                </div> 
-                <div class="col-lg-12 col-12 mb-5">
-                    <div>
-                       <image class="imgWork" src="../../img/work/tealicious/tealicious-can.jpg" alt="go to project"> </image>
-                    </div>
-                </div>  
-                
-                <div class="col-lg-12 col-12 mb-5">
-                    <div>
-                       <image class="imgWork" src="../../img/work/tealicious/tealicious-bag.jpg" alt="go to project"> </image>
-                    </div>
-                </div> 
-                <div class="col-lg-12 col-12 mb-5">
-                    <div>
-                       <image class="imgWork" src="../../img/work/tealicious/tealicious-label.jpg" alt="go to project"> </image>
-                    </div>
-                </div> 
-                <div class="col-lg-12 col-12 mb-5">
-                    <div>
-                       <image class="imgWork" src="../../img/work/tealicious/shopping-bag.jpg" alt="go to project"> </image>
-                    </div>
-                </div>  
         </div>
+        <div class="row">
+          <div class="col-lg-12 col-12">
+            <div class="card text-bg-dark" style="background-image: url(img/work/giardinoBoboli.png);">
+              <div class="card-text-display card-img-overlay pt-5">
+                <p class="titleCard"><a href="pages/work/boboli-gardens.html"> WAYFINDING - 2023</a></p>
+                <p class="titleCard"><a href="pages/work/boboli-gardens.html"> Giardino di Boboli</a></p>
+                <a href="pages/work/tealicious.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+              </div>
+            </div>
+          </div>
 
+        </div>
+        <div class="row">
+          <div class="col-lg-12 col-12">
+            <div class="card text-bg-dark" style="background-image: url(img/work/orienteOccidente.png);">
+              <div class="card-text-display card-img-overlay pt-5">
+                <p class="titleCard"><a href="pages/work/oriente-occidente.html"> VISUAL IDENTITY - 2023</a></p>
+                <p class="titleCard"><a href="pages/work/oriente-occidente.html"> Oriente Occidente</a></p>
+                <a href="pages/work/oriente-occidente.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="row">
+          <div class="col-lg-12 col-12">
+            <div class="card text-bg-dark" style="background-image: url(img/work/snaiSanSiro.png);">
+              <div class="card-text-display card-img-overlay pt-5">
+                <p class="titleCard"><a href="pages/work/ippodromo-snai-san-siro.html">WAYFINDING - 2023</a></p>
+                <p class="titleCard"><a href="pages/work/ippodromo-snai-san-siro.html">Ippodromo Snai San Siro</a></p>
+                <a href="pages/work/tealicious.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+              </div>
+            </div>
+          </div>
+
+        </div>
     </div> 
     <div class="contenedor bgStone overflow-hidden">
       <div class="row ctaIndex pe-5">
         <div class="col-lg-12 col-12">
-          <h3><a href="#"> Explore all projects</a></h3>
-          <image src="../../img/icon/arrow-long-green-right.svg" alt="go to project"></image>
+          <h3><a href="pages/work.html"> Explore all projects</a></h3>
+          <image src="img/icon/arrow-long-green-right.svg" alt="go to project"></image>
         </div>
       </div>
     </div>
@@ -118,10 +110,10 @@
             <h3><a href= "mailto:alvarez.juana@gmail.com">alvarez.juana@gmail.com</a>
             </h3>
             <div class="social mt-3">    
-              <a target="_blank" href="https://www.facebook.com/a.juana"><image src="../../img/icon/facebook.svg" alt="facebook"></image></a> 
-              <a target="_blank" href="https://www.behance.net/alvarezjuana"><image src="../../img/icon/behance.svg" alt="behance"></image></a>
-              <a target="_blank" href="https://www.instagram.com/reels/Cn4RAp5gHWm/"><image src="../../img/icon/instagram.svg" alt="instagram"></image></a>
-              <a target="_blank" href="https://www.linkedin.com/in/alvarezjuana/"><image src="../../img/icon/linkedin.svg" alt="linkedin"></image></a>
+              <a target="_blank" href="https://www.facebook.com/a.juana"><image src="img/icon/facebook.svg" alt="facebook"></image></a> 
+              <a target="_blank" href="https://www.behance.net/alvarezjuana"><image src="img/icon/behance.svg" alt="behance"></image></a>
+              <a target="_blank" href="https://www.instagram.com/reels/Cn4RAp5gHWm/"><image src="img/icon/instagram.svg" alt="instagram"></image></a>
+              <a target="_blank" href="https://www.linkedin.com/in/alvarezjuana/"><image src="img/icon/linkedin.svg" alt="linkedin"></image></a>
           </div> 
           </div>
         </div>
