todas las paginas

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm Juana Alvarez, a graphic designerspecialized in visual identity, packaging, wayfinding & web design">
+    <meta name="keywords" content="design, graphic, florence, italy, branding, webdesign, wayfinding, disegno, grafico, visualidentity">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/buj4rmf.css">
-    <title>Juana Alvarez Graphic Design</title>
+    <title>Home - Juana Alvarez - Graphic Design</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bgGreen">
   <div class="contenedor overflow-hidden">
-    <div class="row nav">
+    <div class="row nav" data-aos="fade-up" data-aos-duration="1000">
       <div class="col-lg-6 col-12 logo">
         <a href="#">Juana Alvarez — <span style="color: #F5C0C4;">Graphic Design</span></a>
       </div>
@@ -28,14 +31,14 @@
 
 
   <main>
-    <div class="contenedor overflow-hidden hero">
-      <div class="row ps-5">
-        <div class="col-lg-10 col-12 introText pe-5">
-          <p class="introText">I’m <span style="color:#F5C0C4">Juana Alvarez</span>, a <span style="color:#F5C0C4">graphic designer</span> specialized in visual identity, packaging, wayfinding & web design</p>
+    <div class="contenedor overflow-hidden hero p-5">
+      <div class="row">
+        <div class="col-lg-10 col-12">
+          <h1><p class="introText" data-aos="fade-up" data-aos-duration="3000">I’m <span style="color:#F5C0C4">Juana Alvarez</span>, a <span style="color:#F5C0C4">graphic designer</span> specialized in visual identity, packaging, wayfinding & web design</p></h1>
         </div>
       </div>
-      <div class="row ps-5">
-        <div class="col-lg-12 col-12 exploreHome mb-5">
+      <div class="row">
+        <div class="col-lg-12 col-12 exploreHome translateY" data-aos="fade-up" data-aos-duration="3000">
           <p><a href="#"> Latest work</a></p>
           <image src="img/icon/arrow-long-white-down.svg" alt="go to project"></image>   
         </div>
@@ -44,11 +47,11 @@
     <div class="contenedor bgStone overflow-hidden">
         <div class="row">
               <div class="col-lg-12 col-12">
-                <div class="card text-bg-dark" style="background-image: url(img/work/gallerieUffizi.png);">
-                  <div class="card-text-display card-img-overlay pt-5">
-                    <p class="titleCard"><a href="pages/work/galleria-degli-uffizi.html"> WEB DESIGN - 2023</a></p>
-                    <p class="titleCard"><a href="pages/work/galleria-degli-uffizi.html"> Gallerie degli Uffizi</a></p>
-                    <a href="pages/work/tealicious.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+                <div class="card" style="background-image: url(img/work/gallerieUffizi.png);">
+                  <div class="card-text-display pt-5" data-aos="fade-up" data-aos-duration="1000">
+                    <h2><p class="titleCard"><a href="pages/work/uffizi-galleries.html"> WEB DESIGN - 2023</a></p></h2>
+                    <h2><p class="titleCard"><a href="pages/work/uffizi-galleries.html"> Gallerie degli Uffizi</a></p></h2>
+                    <a class="translateX" href="pages/work/uffizi-galleries.html"><img src="img/icon/arrow-long-white-right.svg" alt="go to project galleria degli uffizi"></a>
                   </div>
                 </div>
               </div>
@@ -56,11 +59,11 @@
         </div>
         <div class="row">
           <div class="col-lg-12 col-12">
-            <div class="card text-bg-dark" style="background-image: url(img/work/giardinoBoboli.png);">
-              <div class="card-text-display card-img-overlay pt-5">
-                <p class="titleCard"><a href="pages/work/boboli-gardens.html"> WAYFINDING - 2023</a></p>
-                <p class="titleCard"><a href="pages/work/boboli-gardens.html"> Giardino di Boboli</a></p>
-                <a href="pages/work/tealicious.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+            <div class="card" style="background-image: url(img/work/giardinoBoboli.png);">
+              <div class="card-text-display pt-5" data-aos="fade-up" data-aos-duration="1000">
+                <h2><p class="titleCard"><a href="pages/work/boboli-gardens.html"> WAYFINDING - 2023</a></p></h2>
+                <h2><p class="titleCard"><a href="pages/work/boboli-gardens.html"> Giardino di Boboli</a></p></h2>
+                <a class="translateX" href="pages/work/boboli-gardens.html"><img src="img/icon/arrow-long-white-right.svg" alt="go to project Boboli Gardens"></a>
               </div>
             </div>
           </div>
@@ -68,11 +71,11 @@
         </div>
         <div class="row">
           <div class="col-lg-12 col-12">
-            <div class="card text-bg-dark" style="background-image: url(img/work/orienteOccidente.png);">
-              <div class="card-text-display card-img-overlay pt-5">
-                <p class="titleCard"><a href="pages/work/oriente-occidente.html"> VISUAL IDENTITY - 2023</a></p>
-                <p class="titleCard"><a href="pages/work/oriente-occidente.html"> Oriente Occidente</a></p>
-                <a href="pages/work/oriente-occidente.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+            <div class="card" style="background-image: url(img/work/orienteOccidente.png);">
+              <div class="card-text-display pt-5" data-aos="fade-up" data-aos-duration="1000">
+                <h2><p class="titleCard"><a href="pages/work/oriente-occidente.html"> VISUAL IDENTITY - 2023</a></p></h2>
+                <h2><p class="titleCard"><a href="pages/work/oriente-occidente.html"> Oriente Occidente</a></p></h2>
+                <a class="translateX" href="pages/work/oriente-occidente.html"><img src="img/icon/arrow-long-white-right.svg" alt="go to project Oriente Occidente"></a>
               </div>
             </div>
           </div>
@@ -80,11 +83,11 @@
         </div>
         <div class="row">
           <div class="col-lg-12 col-12">
-            <div class="card text-bg-dark" style="background-image: url(img/work/snaiSanSiro.png);">
-              <div class="card-text-display card-img-overlay pt-5">
-                <p class="titleCard"><a href="pages/work/ippodromo-snai-san-siro.html">WAYFINDING - 2023</a></p>
-                <p class="titleCard"><a href="pages/work/ippodromo-snai-san-siro.html">Ippodromo Snai San Siro</a></p>
-                <a href="pages/work/tealicious.html"><img src="img/icon/arrow-long-white-right.svg"></a>
+            <div class="card" style="background-image: url(img/work/snaiSanSiro.png);">
+              <div class="card-text-display pt-5" data-aos="fade-up" data-aos-duration="1000">
+                <h2><p class="titleCard"><a href="pages/work/ippodromo-sani-san-siro.html">WAYFINDING - 2023</a></p></h2>
+                <h2><p class="titleCard"><a href="pages/work/ippodromo-sani-san-siro.html">Ippodromo Snai San Siro</a></p></h2>
+                <a class="translateX" href="pages/work/ippodromo-sani-san-siro.html"><img src="img/icon/arrow-long-white-right.svg" alt="go to project Ippodoromo San Siro"></a>
               </div>
             </div>
           </div>
@@ -92,23 +95,23 @@
         </div>
     </div> 
     <div class="contenedor bgStone overflow-hidden">
-      <div class="row ctaIndex pe-5">
-        <div class="col-lg-12 col-12">
+      <div class="row ctaIndex pr-5 translateX">
+        <div class="col-lg-12 col-12" data-aos="fade-up" data-aos-duration="1000">
           <h3><a href="pages/work.html"> Explore all projects</a></h3>
-          <image src="img/icon/arrow-long-green-right.svg" alt="go to project"></image>
+          <image src="img/icon/arrow-long-green-right.svg" alt="explore all projects"></image>
         </div>
       </div>
     </div>
-    <footer class="contenedor bgGreen overflow-hidden boxFooter">
-        <div class="row align-items-center">
-          <div class="col-lg-10 col-12 footerText mr-5 paddingR">
-            <h2>Let’s create <span style="color:#F5C0C4">great design</span> together</h2>
+    <footer class="contenedor bgGreen overflow-hidden boxFooter" data-aos="fade-up" data-aos-duration="1000">
+        <div class="row footerAlign">
+          <div class="col-lg-7 col-12 footerText mr-5">
+            <h3>Let’s create <span style="color:#F5C0C4">great design</span> together</h3>
           </div>
-          <div class="col-lg-2 col-12 homeContact">
-            <h3>Contact me</h3>
-            <h3> +39 3420793103</h3>
-            <h3><a href= "mailto:alvarez.juana@gmail.com">alvarez.juana@gmail.com</a>
-            </h3>
+          <div class="col-lg-3 col-12 homeContact">
+            <h4>Contact me</h4>
+            <h4> +39 3420793103</h4>
+            <h4><a href= "mailto:alvarez.juana@gmail.com">alvarez.juana@gmail.com</a>
+            </h4>
             <div class="social mt-3">    
               <a target="_blank" href="https://www.facebook.com/a.juana"><image src="img/icon/facebook.svg" alt="facebook"></image></a> 
               <a target="_blank" href="https://www.behance.net/alvarezjuana"><image src="img/icon/behance.svg" alt="behance"></image></a>
@@ -117,10 +120,14 @@
           </div> 
           </div>
         </div>
-    </footer>
+      </footer>
 
 
-  </main>   
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </main>  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>  
 </body>
 </html>
