--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm Juana Alvarez, a graphic designerspecialized in visual identity, packaging, wayfinding & web design">
+    <meta name="keywords" content="design, graphic, florence, italy, branding, webdesign, wayfinding, disegno, grafico, visualidentity">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/buj4rmf.css">
-    <title>Juana Alvarez Graphic Design</title>
+    <title>Contact - Juana Alvarez - Graphic Design</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="bgStone">
   <div class="contenedor overflow-hidden">
-    <div class="row navGreen">
+    <div class="row navGreen" data-aos="fade-up" data-aos-duration="1000">
       <div class="col-lg-6 col-12 logoGreen">
         <a href="../index.html">Juana Alvarez — <span style="color: #707070;">Graphic Design</span></a>
       </div>
@@ -28,13 +31,13 @@
 
 
   <main>
-    <div class="contenedor overflow-hidden">
-      <div class="row">
-        <div class="col-lg-10 col-12 introText">
-            <p class="titleContact">Drop me a line</p>
+    <div class="contenedor overflow-hidden p-5">
+      <div class="row mt-5 mb-5" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-lg-10 col-12">
+            <p class="titleContact ">Drop me a line</p>
         </div>
       </div>
-      <div class="row px-5 mt-5">
+      <div class="row pt-5" data-aos="fade-up" data-aos-duration="1000">
         <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email address</label>
@@ -49,32 +52,32 @@
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
               <label class="form-check-label" for="exampleCheck1">Check me out</label>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary scale1">Submit</button>
           </form>
       </div>
       
     </div>  
 
     <div class="contenedor overflow-hidden bgStone">
-        <div class="row ctaIndex pe-5">
-            <div class="col-lg-12 col-12">
-              <h3><a href="#"> Explore my projects</a></h3>
-              <image class="pt-3" src="../img/icon/arrow-long-green-right.svg" alt="go to project"></image>
+        <div class="row ctaIndex pr-5 translateX" >
+            <div class="col-lg-12 col-12" data-aos="fade-up" data-aos-duration="1000">
+              <h3><a href="work.html"> Explore my projects</a></h3>
+              <image class="pt-3" src="../img/icon/arrow-long-green-right.svg" alt="go to my projects"></image>
             </div>
           </div>
         
       </div> 
 
-    <footer class="contenedor bgGreen overflow-hidden boxFooter">
-        <div class="row align-items-center">
-          <div class="col-lg-10 col-12 footerText mr-5 paddingR">
-            <h2>Let’s create <span style="color:#F5C0C4">great design</span> together</h2>
+      <footer class="contenedor bgGreen overflow-hidden boxFooter" data-aos="fade-up" data-aos-duration="1000">
+        <div class="row footerAlign">
+          <div class="col-lg-7 col-12 footerText mr-5">
+            <h3>Let’s create <span style="color:#F5C0C4">great design</span> together</h3>
           </div>
-          <div class="col-lg-2 col-12 homeContact">
-            <h3>Contact me</h3>
-            <h3> +39 3420793103</h3>
-            <h3><a href= "mailto:alvarez.juana@gmail.com">alvarez.juana@gmail.com</a>
-            </h3>
+          <div class="col-lg-3 col-12 homeContact">
+            <h4>Contact me</h4>
+            <h4> +39 3420793103</h4>
+            <h4><a href= "mailto:alvarez.juana@gmail.com">alvarez.juana@gmail.com</a>
+            </h4>
             <div class="social mt-3">    
               <a target="_blank" href="https://www.facebook.com/a.juana"><image src="../img/icon/facebook.svg" alt="facebook"></image></a> 
               <a target="_blank" href="https://www.behance.net/alvarezjuana"><image src="../img/icon/behance.svg" alt="behance"></image></a>
@@ -83,10 +86,13 @@
           </div> 
           </div>
         </div>
-    </footer>
-
-
+      </footer>
+  
+  
   </main>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+    AOS.init();
+    </script> 
 </html>
