--- a/pages/work.html
+++ b/pages/work.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="I'm Juana Alvarez, a graphic designerspecialized in visual identity, packaging, wayfinding & web design">
+    <meta name="keywords" content="design, graphic, florence, italy, branding, webdesign, wayfinding, disegno, grafico, visualidentity">
     <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/buj4rmf.css">
-    <title>Juana Alvarez Graphic Design</title>
+    <title>Work - Juana Alvarez - Graphic Design</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="bgGreen">
   <div class="contenedor overflow-hidden">
-    <div class="row nav">
+    <div class="row nav" data-aos="fade-up" data-aos-duration="1000">
       <div class="col-lg-6 col-12 logo">
         <a href="../index.html">Juana Alvarez — <span style="color: #F5C0C4;">Graphic Design</span></a>
       </div>
@@ -28,18 +31,18 @@
 
 
   <main>
-    <div class="contenedor overflow-hidden">
-      <div class="row ps-5">
-        <div class="col-lg-10 col-12 introText pe-5">
-            <p class="titleWork">Explore all projects or <span style="color:#F5C0C4">filter</span> by category</p>
+    <div class="contenedor overflow-hidden p-5">
+      <div class="row heroWork" data-aos="fade-up" data-aos-duration="1000">
+        <div class="col-lg-8 col-12">
+            <h1><p class="titleWork">Explore all projects or <span style="color:#F5C0C4">filter</span> by category</p></h1>
         </div>
       </div>
-      <div class="row ps-5">
+      <div class="row" data-aos="fade-up" data-aos-duration="1000">
         <div class="col-lg-12 col-12 exploreHome mb-5">
           <image src="../img/icon/arrow-long-pink-down.svg" alt="go to project"></image>  
         </div>
       </div>
-      <div class="row py-3 px-5">
+      <div class="row py-3" data-aos="fade-up" data-aos-duration="1000">
         <div class="col-lg-12 col-12 filterWork">
             <ul>
                 <li><a href="#">All projects</a><image src="../img/icon/arrow-short-pink-down.svg" alt="go to project" style="margin-left: 10px;"></image></li>
@@ -51,118 +54,122 @@
         </div>
       </div>
     </div>  
-    <div class="contenedor bgStone overflow-hidden">
-        <div class="row workContent paddingTop">
+    <div class="contenedor bgStone overflow-hidden p-5">
+        <div class="row workContent" data-aos="fade-up" data-aos-duration="1000">
               <div class="col-lg-12 col-12 cardContentWork">
                     <div>
-                        <a href="#"><image class="imgWork" src="../img/work/gallerieUffizi-2.jpg" alt="go to project"> </image></a>
+                        <a href="work/uffizi-galleries.html"><image class="imgWork translateYup" src="../img/work/gallerieUffizi-2.jpg" alt="go to project Galleria degli Uffizi"> </image></a>
                     </div>
-                    <div class="card-text-display-work">
-                        <p class="titleCardWork"><a href="#"> WAYFINDING - 2023</a></p>
-                        <p class="titleCardWork"><a href="#"> Galleria degli Uffizi</a></p>
+                    <div class="card-text-display-work translateY">
+                        <h2><p class="titleCardWork"><a href="work/uffizi-galleries.html"> WAYFINDING - 2023</a></p></h2>
+                        <h2><p class="titleCardWork"><a href="work/uffizi-galleries.html"> Galleria degli Uffizi</a></p></h2>
                     </div>
                 </div>
                 <div class="col-lg-12 col-12 cardContentWork">
                     <div>
-                        <a href="work/tealicious.html"><image class="imgWork" src="../img/work/tealicious.png" alt="go to project"> </image></a>
+                        <a href="work/tealicious.html"><image class="imgWork translateYup" src="../img/work/tealicious.png" alt="go to project Tealicious"> </image></a>
                     </div>
-                    <div class="card-text-display-work">
-                        <p class="titleCardWork"><a href="work/tealicious.html"> BRANDING - 2023</a></p>
-                        <p class="titleCardWork"><a href="work/tealicious.html"> Tealicious</a></p>
+                    <div class="card-text-display-work translateY">
+                        <h2><p class="titleCardWork"><a href="work/tealicious.html"> BRANDING - 2023</a></p></h2>
+                        <h2><p class="titleCardWork"><a href="work/tealicious.html"> Tealicious</a></p></h2>
                     </div> 
                 </div>       
         </div>
-        <div class="row workContent">
+        <div class="row workContent" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-lg-12 col-12 cardContentWork">
                   <div>
-                    <a href="work/oriente-occidente.html"><image class="imgWork" src="../img/work/oriente-occidente/OO_index.jpg" alt="go to project"> </image></a>
+                    <a href="work/oriente-occidente.html"><image class="imgWork translateYup" src="../img/work/oriente-occidente/OO_index.jpg" alt="go to project Oriente Occidente"> </image></a>
                   </div>
-                  <div class="card-text-display-work">
-                      <p class="titleCardWork"><a href="work/oriente-occidente.html"> BRANDING - 2023</a></p>
-                      <p class="titleCardWork"><a href="work/oriente-occidente.html"> Oriente Occidente</a></p>
+                  <div class="card-text-display-work translateY">
+                      <h2><p class="titleCardWork"><a href="work/oriente-occidente.html"> BRANDING - 2023</a></p></h2>
+                      <h2><p class="titleCardWork"><a href="work/oriente-occidente.html"> Oriente Occidente</a></p></h2>
                   </div>
               </div>
               <div class="col-lg-12 col-12 cardContentWork">
                   <div>
-                    <a href="#"><image class="imgWork" src="../img/work/tlp.jpg" alt="go to project"> </image></a>
+                    <a href="#"><image class="imgWork translateYup" src="../img/work/tlp.jpg" alt="go to project The Local Preserve"> </image></a>
                   </div>
-                  <div class="card-text-display-work">
-                      <p class="titleCardWork"><a href="#"> BRANDING & PACKAGING - 2023</a></p>
-                      <p class="titleCardWork"><a href="#"> The Local Preserve</a></p>
+                  <div class="card-text-display-work translateY">
+                      <h2><p class="titleCardWork"><a href="#"> BRANDING & PACKAGING - 2023</a></p></h2>
+                      <h2><p class="titleCardWork"><a href="#"> The Local Preserve</a></p></h2>
                   </div> 
               </div>       
         </div>
-        <div class="row workContent">
+        <div class="row workContent" data-aos="fade-up" data-aos-duration="1000">
         <div class="col-lg-12 col-12 cardContentWork">
               <div>
-                <a href="#"><image class="imgWork" src="../img/work/polimoda.jpg" alt="go to project"> </image></a>
+                <a href="#"><image class="imgWork translateYup" src="../img/work/polimoda.jpg" alt="go to project Polimoda"> </image></a>
               </div>
-              <div class="card-text-display-work">
-                  <p class="titleCardWork"><a href="#"> WEB DESIGN - 2023</a></p>
-                  <p class="titleCardWork"><a href="#"> Polimoda</a></p>
+              <div class="card-text-display-work translateY">
+                <h2><p class="titleCardWork"><a href="#"> WEB DESIGN - 2023</a></p></h2>
+                <h2><p class="titleCardWork"><a href="#"> Polimoda</a></p></h2>
               </div>
           </div>
           <div class="col-lg-12 col-12 cardContentWork">
               <div>
-                <a href="#"><image class="imgWork" src="../img/work/giardinoBoboli.png" alt="go to project"> </image></a>
+                <a href="work/boboli-gardens.html"><image class="imgWork translateYup" src="../img/work/giardino-boboli/08-igresso-boboli.jpg" alt="go to project"> </image></a>
               </div>
-              <div class="card-text-display-work">
-                  <p class="titleCardWork"><a href="#"> BRANDING - 2023</a></p>
-                  <p class="titleCardWork"><a href="#"> Giardino di Boboli</a></p>
+              <div class="card-text-display-work translateY">
+                  <p class="titleCardWork"><a href="work/boboli-gardens.html"> BRANDING - 2023</a></p>
+                  <p class="titleCardWork"><a href="work/boboli-gardens.html"> Giardino di Boboli</a></p>
               </div> 
           </div>       
         </div>
-        <div class="row workContent">
+        <div class="row workContent" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-lg-12 col-12 cardContentWork">
                   <div>
-                    <a href="#"><image class="imgWork" src="../img/work/gallerieUffizi-2.jpg" alt="go to project"> </image></a>
+                    <a href="work/uffizi-galleries.html"><image class="imgWork translateYup" src="../img/work/gallerieUffizi-2.jpg" alt="go to project Galleria degli Uffizi"> </image></a>
                   </div>
-                  <div class="card-text-display-work">
-                      <p class="titleCardWork"><a href="#"> WAYFINDING - 2023</a></p>
-                      <p class="titleCardWork"><a href="#"> Giardino di Boboli</a></p>
+                  <div class="card-text-display-work translateY">
+                      <h2><p class="titleCardWork"><a href="work/uffizi-galleries.html"> WAYFINDING - 2023</a></p></h2>
+                      <h2><p class="titleCardWork"><a href="work/uffizi-galleries.html"> Giardino di Boboli</a></p></h2>
                   </div>
               </div>
               <div class="col-lg-12 col-12 cardContentWork">
                   <div>
-                    <a href="#"> <image class="imgWork" src="../img/work/tealicious.png" alt="go to project"> </image></a>
+                    <a href="work/tealicious.html"> <image class="imgWork translateYup" src="../img/work/tealicious.png" alt="go to project Tealicious"> </image></a>
                   </div>
-                  <div class="card-text-display-work">
-                      <p class="titleCardWork"><a href="#"> BRANDING - 2023</a></p>
-                      <p class="titleCardWork"><a href="#"> Tealicious</a></p>
+                  <div class="card-text-display-work translateY">
+                      <h2><p class="titleCardWork"><a href="work/tealicious.html"> BRANDING - 2023</a></p></h2>
+                      <h2><p class="titleCardWork"><a href="work/tealicious.html"> Tealicious</a></p></h2>
                   </div> 
               </div>       
         </div>
     </div> 
     <div class="contenedor bgStone overflow-hidden">
-      <div class="row ctaIndex pe-5">
-        <div class="col-lg-12 col-12">
-          <h3><a href="#"> Explore all projects</a></h3>
-          <image src="../img/icon/arrow-long-green-right.svg" alt="go to project"></image>
+      <div class="row ctaIndex pr-5 translateX">
+        <div class="col-lg-12 col-12" data-aos="fade-up" data-aos-duration="1000">
+          <h3><a href="contact.html"> Contact me</a></h3>
+          <image src="../img/icon/arrow-long-green-right.svg" alt="contact me"></image>
         </div>
       </div>
     </div>
-    <footer class="contenedor bgGreen overflow-hidden boxFooter">
-        <div class="row align-items-center">
-          <div class="col-lg-10 col-12 footerText mr-5 paddingR">
-            <h2>Let’s create <span style="color:#F5C0C4">great design</span> together</h2>
-          </div>
-          <div class="col-lg-2 col-12 homeContact">
-            <h3>Contact me</h3>
-            <h3> +39 3420793103</h3>
-            <h3><a href= "mailto:alvarez.juana@gmail.com">alvarez.juana@gmail.com</a>
-            </h3>
-            <div class="social mt-3">    
-              <a target="_blank" href="https://www.facebook.com/a.juana"><image src="../img/icon/facebook.svg" alt="facebook"></image></a> 
-              <a target="_blank" href="https://www.behance.net/alvarezjuana"><image src="../img/icon/behance.svg" alt="behance"></image></a>
-              <a target="_blank" href="https://www.instagram.com/reels/Cn4RAp5gHWm/"><image src="../img/icon/instagram.svg" alt="instagram"></image></a>
-              <a target="_blank" href="https://www.linkedin.com/in/alvarezjuana/"><image src="../img/icon/linkedin.svg" alt="linkedin"></image></a>
-          </div> 
-          </div>
+    <footer class="contenedor bgGreen overflow-hidden boxFooter" data-aos="fade-up" data-aos-duration="1000">
+      <div class="row footerAlign">
+        <div class="col-lg-7 col-12 footerText mr-5">
+          <h3>Let’s create <span style="color:#F5C0C4">great design</span> together</h3>
         </div>
+        <div class="col-lg-3 col-12 homeContact">
+          <h4>Contact me</h4>
+          <h4> +39 3420793103</h4>
+          <h4><a href= "mailto:alvarez.juana@gmail.com">alvarez.juana@gmail.com</a>
+          </h4>
+          <div class="social mt-3">    
+            <a target="_blank" href="https://www.facebook.com/a.juana"><image src="../img/icon/facebook.svg" alt="facebook"></image></a> 
+            <a target="_blank" href="https://www.behance.net/alvarezjuana"><image src="../img/icon/behance.svg" alt="behance"></image></a>
+            <a target="_blank" href="https://www.instagram.com/reels/Cn4RAp5gHWm/"><image src="../img/icon/instagram.svg" alt="instagram"></image></a>
+            <a target="_blank" href="https://www.linkedin.com/in/alvarezjuana/"><image src="../img/icon/linkedin.svg" alt="linkedin"></image></a>
+        </div> 
+        </div>
+      </div>
     </footer>
 
 
   </main>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>  
 </body>
 </html>
