--- a/pages/work.html
+++ b/pages/work.html
@@ -32,7 +32,7 @@
 
   <main>
     <div class="contenedor overflow-hidden p-5">
-      <div class="row heroWork" data-aos="fade-up" data-aos-duration="1000">
+      <div class="row" data-aos="fade-up" data-aos-duration="1000">
         <div class="col-lg-8 col-12">
             <h1><p class="titleWork">Explore all projects or <span style="color:#F5C0C4">filter</span> by category</p></h1>
         </div>
