--- a/pages/about.html
+++ b/pages/about.html
@@ -32,7 +32,7 @@
       <div class="contenedor overflow-hidden pb-5">
         <div class="row" data-aos="fade-up" data-aos-duration="1000">
           <div class="col-lg-9 col-12 p-5 mt-5 introTextAbout">
-              <p>My name is Juana Alvarez, I am an Argentine graphic designer. I studied at the University of Buenos Aires (FADU) and from a very young age I began to work in design agency in the City of Buenos Aires. After finishing my studies I began to travel until I reached my final and current destination, my mother’s hometown in Florence-Italy. </p>
+              <p>My name is Juana Alvarez, I am an Argentine graphic designer. I've studied at the University of Buenos Aires (FADU) and from a very young age I began to work in design agencies across the City of Buenos Aires. After finishing my studies I began to travel the world until I've reached my final and current destination, my mother’s hometown in Florence-Italy. </p>
           </div>
         </div>
         <div class="row alignContentEnd" data-aos="fade-up" data-aos-duration="1000">
@@ -44,7 +44,7 @@
       <div class="contenedor overflow-hidden bgStone">
           <div class="row" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-lg-6 col-12 p-5 mt-5">
-                <p class="txtAbout">I have been working for more than a decade for a company called Cantiere Creativo, which is mainly dedicated to Web products, but which also has design projects. Thanks to its contacts with famous entities such as The Uffizi Gallery, I had the opportunity to carry out projects of great importance such us the Wayfinding for one of the most important museums in the world. At the same time, I carried out personal projects as a freelance related to different areas of design, mostly Branding and Packaging.
+                <p class="txtAbout">I have been working for more than a decade for a company called <a>Cantiere Creativo</a>, which is mainly dedicated to Web products, but which also has design projects. Thanks to its contacts with famous entities such as The Uffizi Gallery, I had the opportunity to carry out projects of great importance such us the Wayfinding for one of the most important museums in the world. At the same time, I carried out personal projects as a freelance related to different areas of design, mostly Branding and Packaging.
                 I am currently studying Frontend Development with the Coder House school, my goal is to reduce the gap that exists today between a designer and a programmer, which will allow me to carry out web design projects in a more fluid and friendly way. I will continue training and learning code and maybe one day I will be able to carry out these projects not only focusing on the UX but also creating the layout in HTML and CSS.
                 </p>
             </div>
