cambios css about

--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
       </div>  
       <div class="contenedor overflow-hidden bgStone">
           <div class="row" data-aos="fade-up" data-aos-duration="1000">
-            <div class="col-lg-6 col-12 p-5 mt-5">
+            <div class="col-lg-6 col-12 p-5 mt-5 ml-5">
                 <p class="txtAbout">I have been working for more than a decade for a company called <a>Cantiere Creativo</a>, which is mainly dedicated to Web products, but which also has design projects. Thanks to its contacts with famous entities such as The Uffizi Gallery, I had the opportunity to carry out projects of great importance such us the Wayfinding for one of the most important museums in the world. At the same time, I carried out personal projects as a freelance related to different areas of design, mostly Branding and Packaging.
                 I am currently studying Frontend Development with the Coder House school, my goal is to reduce the gap that exists today between a designer and a programmer, which will allow me to carry out web design projects in a more fluid and friendly way. I will continue training and learning code and maybe one day I will be able to carry out these projects not only focusing on the UX but also creating the layout in HTML and CSS.
                 </p>
