--- a/pages/contact.html
+++ b/pages/contact.html
@@ -38,13 +38,13 @@
       <div class="row pt-5" data-aos="fade-up" data-aos-duration="1000">
         <form>
             <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="myForm" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+              <label for="namelastmane" class="form-label">Your name</label>
+              <input type="personalname" class="myForm" id="namelastmane" aria-describedby="name">
+              <div id="name" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="myForm" id="exampleInputPassword1">
+              <label for="emailaddress" class="form-label">Your Email address</label>
+              <input type="email" class="myForm" id="emailaddress">
             </div>
             <div class="mb-5 form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
