--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,7 +43,7 @@
               <div id="name" class="form-text">We'll never share your email with anyone else.</div>
             </div>
             <div class="mb-3">
-              <label for="emailaddress" class="form-label">Your Email address</label>
+              <label for="emailaddress" class="form-label">Your email</label>
               <input type="email" class="myForm" id="emailaddress">
             </div>
             <div class="mb-5 form-check">
