--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <main>
-    <div class="contenedor overflow-hidden p-5">
+    <div class="contenedor overflow-hidden p-5 contentContact">
       <div class="row mt-5 mb-5" data-aos="fade-up" data-aos-duration="1000">
         <div class="col-lg-10 col-12">
             <p class="titleContact ">Drop me a line</p>
