--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
       </div>  
       <div class="contenedor overflow-hidden bgStone">
           <div class="row" data-aos="fade-up" data-aos-duration="1000">
-            <div class="col-lg-6 col-12 p-5 mt-5 ml-5">
+            <div class="col-lg-6 col-12 p-5">
                 <p class="txtAbout">
                 Throughout my experience as a graphic designer, I have had the opportunity to work with a wide range of clients in various industries, including cultural, food & beverage, and technology. I pride myself on being able to understand each of my clients' unique needs, tailoring my approach to meet their specific goals and objectives.<br>
                   
