--- a/pages/about.html
+++ b/pages/about.html
@@ -32,7 +32,7 @@
       <div class="contenedor overflow-hidden pb-5">
         <div class="row" data-aos="fade-up" data-aos-duration="1000">
           <div class="col-lg-9 col-12 p-5 mt-5 introTextAbout">
-              <p>I am thrilled to have the opportunity to showcase my experience as a graphic designer with a focus on branding, packaging, wayfinding and web design. With years of experience under my belt, I am confident in my ability to bring a unique perspective to each project I take on. My passion for branding began early on in my career, where I was able to hone my skills in creating powerful and memorable visual identities for a variety of clients. Through my work, I have become well-versed in crafting logos, color schemes, and typography that not only look great but serve as a representation of a client's brand. </p>
+              <h1>I am thrilled to have the opportunity to showcase my experience as a graphic designer with a focus on branding, packaging, wayfinding and web design. With years of experience under my belt, I am confident in my ability to bring a unique perspective to each project I take on. My passion for branding began early on in my career, where I was able to hone my skills in creating powerful and memorable visual identities for a variety of clients. Through my work, I have become well-versed in crafting logos, color schemes, and typography that not only look great but serve as a representation of a client's brand. </h1>
           </div>
         </div>
         <div class="row alignContentEnd" data-aos="fade-up" data-aos-duration="1000">
