--- a/pages/work/boboli-gardens.html
+++ b/pages/work/boboli-gardens.html
@@ -34,7 +34,7 @@
         <div class="contenedor overflow-hidden p-5">
                 <div class="row heroWork" data-aos="fade-up" data-aos-duration="1000">
                     <div class="col-lg-10 col-12 introText">
-                        <p class="titleWork">Wayfinding Boboli Gardens - Florence</p>
+                        <h1 class="titleWork">Wayfinding Boboli Gardens - Florence</h1>
                     </div>
                 </div>
                 <div class="row" data-aos="fade-up" data-aos-duration="1000">
