--- a/pages/work/ippodromo-sani-san-siro.html
+++ b/pages/work/ippodromo-sani-san-siro.html
@@ -35,7 +35,7 @@
     <div class="contenedor overflow-hidden p-5">
       <div class="row heroWork">
         <div class="col-lg-10 col-12 introText">
-            <p class="titleWork">Wayfinding ippodromo Sani San Siro</p>
+            <h1 class="titleWork">Wayfinding ippodromo Sani San Siro</h1>
         </div>
       </div>
       <div class="row" data-aos="fade-up" data-aos-duration="1000">
