--- a/pages/work/oriente-occidente.html
+++ b/pages/work/oriente-occidente.html
@@ -37,7 +37,7 @@
     <div class="contenedor overflow-hidden p-5">
       <div class="row heroWork">
         <div class="col-lg-10 col-12 introText">
-            <p class="titleWork">Re Branding - Oriente Occidente</p>
+            <h1 class="titleWork">Re Branding - Oriente Occidente</h1>
         </div>
       </div>
       <div class="row" data-aos="fade-up" data-aos-duration="1000">
