--- a/pages/work/tealicious.html
+++ b/pages/work/tealicious.html
@@ -33,7 +33,7 @@
     <div class="contenedor overflow-hidden p-5">
       <div class="row heroWork">
         <div class="col-lg-10 col-12 introText">
-            <p class="titleWork">Complete Branding Tealicious</p>
+            <h1 class="titleWork">Complete Branding Tealicious</h1>
         </div>
       </div>
       <div class="row" data-aos="fade-up" data-aos-duration="1000">
