--- a/pages/work/uffizi-galleries.html
+++ b/pages/work/uffizi-galleries.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="../../img/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="../../img/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://use.typekit.net/buj4rmf.css">
-    <title>Juana Alvarez Galleria degli Uffizi</title>
+    <title>Juana Alvarez Uffizi Galleries</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../../css/style.css">
@@ -33,7 +33,7 @@
     <div class="contenedor overflow-hidden p-5">
       <div class="row heroWork">
         <div class="col-lg-10 col-12 introText">
-            <h1 class="titleWork">Uffizi Galleries</h1>
+            <h1 class="titleWork">Uffizi Galleries — Web Design</h1>
         </div>
       </div>
       <div class="row" data-aos="fade-up" data-aos-duration="1000">
@@ -44,8 +44,8 @@
       <div class="row py-3">
         <div class="col-lg-12 col-12 description">
             <ul>
-                <li><a href="#">Branding</a></li>
-                <li><a href="#">2022</a></li>
+                <li><a href="#">Web Design</a></li>
+                <li><a href="#">2018</a></li>
                 <li><a href="#">Culture</a></li>
             </ul>
         </div>
@@ -54,7 +54,7 @@
     <div class="contenedor overflow-hidden bgWhite p-5">
         <div class="row introWork">
             <div class="col-lg-6 col-12" data-aos="fade-up" data-aos-duration="1000">
-                <p> <b>Oriente Occidente </b> is a cultural association that believes in the practice and culture of dialogue and plans networks of relationships through the language of dance, which by its definition goes beyond the boundaries: of language, ethnicity, gender, age, culture. With a visionary and excellent look. It is a bridge between East and West, between North and South, between form and content, between ethics and aesthetics, between the past and the future.
+                <p> Since 2014, the Uffizi Galleries have brought together three extraordinary museum complexes which together house the nucleus of the collections of art and precious handicrafts, books and botany of the Medici, Hapsburg, Lorraine and Savoy families: an authentic collection of treasures from Antiquity to the 20th century which have made the name of the Uffizi, Palazzo Pitti and the Boboli Gardens great over time; three museum sites brought together and connected to each other, since the Renaissance, through the ingenious construction of the Vasari Corridor, and which together constitute one of the most important and most visited cultural poles in the world.
                  </p>
             </div> 
         </div>
