--- a/pages/work.html
+++ b/pages/work.html
@@ -59,7 +59,7 @@
                         <a href="work/uffizi-galleries.html"><image class="imgWork translateYup" src="../img/work/gallerieUffizi-2.jpg" alt="go to project Galleria degli Uffizi"> </image></a>
                     </div>
                     <div class="card-text-display-work translateY">
-                        <h2><p class="titleCardWork"><a href="work/uffizi-galleries.html"> WAYFINDING - 2023</a></p></h2>
+                        <h2><p class="titleCardWork"><a href="work/uffizi-galleries.html"> WEB DESIGN - 2023</a></p></h2>
                         <h2><p class="titleCardWork"><a href="work/uffizi-galleries.html"> Galleria degli Uffizi</a></p></h2>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
                     <a href="#"><image class="imgWork translateYup" src="../img/work/tlp.jpg" alt="go to project The Local Preserve"> </image></a>
                   </div>
                   <div class="card-text-display-work translateY">
-                      <h2><p class="titleCardWork"><a href="#"> BRANDING & PACKAGING - 2023</a></p></h2>
+                      <h2><p class="titleCardWork"><a href="#"> BRANDING - 2023</a></p></h2>
                       <h2><p class="titleCardWork"><a href="#"> The Local Preserve</a></p></h2>
                   </div> 
               </div>       
