--- a/pages/work/uffizi-galleries.html
+++ b/pages/work/uffizi-galleries.html
@@ -61,33 +61,34 @@
         <div class="row workContent">
               <div class="col-lg-12 col-12 mb-5" data-aos="fade-up" data-aos-duration="1000">
                     <div>
-                       <image class="imgWork" src="../../img/work/oriente-occidente/costruzione-logo-2.gif" alt="go to project"> </image>
+                       <image class="imgWork" src="../../img/work/galleria-uffizi-web/uffizi-web-01.gif" alt="go to project"> </image>
                     </div>
                 </div>
         </div>
         <div class="row workContent">
               <div class="col-lg-12 col-12" data-aos="fade-up" data-aos-duration="1000">
                   <div>
-                    <image class="imgWork" src="../../img/work/oriente-occidente/oo_old-new-logo.gif" alt="go to project"> </image>
+                    <image class="imgWork" src="../../img/work/galleria-uffizi-web/uffizi-web-02.gif" alt="go to project"> </image>
                   </div>
               </div> 
         </div>
         <div class="row introWork">
             <div class="col-lg-6 col-12" data-aos="fade-up" data-aos-duration="1000">
-                <p> <b>REQUEST</b><br/>
-                    We were contacted to redesign the Oriente Occidente brand. They had a historic brand, created in 1981 by the Italian designer "Duilio Martinis", to which they were very close and which they did not want to distort, but at the same time they knew they had some gaps in their overall branding. There wasn't a coherent style that connected all their communication and there was also the need to create a brand book that established guidelines that helped to have a single vision of their graphic universe, as well as a clear message to communicate to the world all projects.
+                <p> 
+                  A cut with the past, or a cut for the future
+                  An epochal event for the Uffizi Galleries: a new brand, created by CarmieUbertis, and a new website. A real media revolution. The apparent simplicity of the site is the result of a careful study of information architecture which opens up multiple avenues for the evolution of this editorial platform. A system designed and created ad hoc with excellent technologies to relate the different targets in a transversal way with the numerous content areas. Thus the static sections we are used to disappear, to give life to dynamic structures that evolve and are enriched day after day.
                  </p>
             </div> 
         </div>
         <div class="row workContentSmall gy-5">
             <div class="col-lg-5 col-12 mb-5 mr-5" data-aos="fade-up" data-aos-duration="1000">
                 <div>
-                   <image class="imgWork" src="../../img/work/oriente-occidente/oo-branding-construction.jpg" alt="go to project"> </image>
+                   <image class="imgWork" src="../../img/work/galleria-uffizi-web/uffizi-web-03.png" alt="go to project"> </image>
                 </div>
             </div>
             <div class="col-lg-5 col-12 mb-5 ml-5" data-aos="fade-up" data-aos-duration="1000">
                 <div>
-                  <image class="imgWork" src="../../img/work/oriente-occidente/oo-color-palette.jpg" alt="go to project"> </image>
+                  <image class="imgWork" src="../../img/work/galleria-uffizi-web/uffizi-web-04.png" alt="go to project"> </image>
                 </div>
             </div>
         </div>
